--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,11 @@ openai_detector==0.1.2
 argparse==1.4.0
 torch
 transformers
+dash==2.7.1
+dash-bootstrap-components==1.3.0
+docx2txt==0.8
+PyPDF2==3.0.1
+transformers==4.25.1
+gunicorn==20.1.0
+pandas
+pdfplumber
